--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -3,3 +3,10 @@
 <%= render 'form', project: @project %>
 
 <%= link_to 'Back', projects_path %>
+<br>
+
+<%= link_to 'New Task', new_task_path %>
+
+<br>
+<%= link_to 'New Developer', new_developer_path %>
+
