--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -29,3 +29,7 @@
 <br>
 
 <%= link_to 'New Developer', new_developer_path %>
+<br>
+<%= link_to 'Task List', tasks_path %>
+<br>
+<%= link_to 'Project List', projects_path %>
